added aos to teh rest of the page

--- a/indexNew.html
+++ b/indexNew.html
@@ -150,7 +150,7 @@
   <section class="work">
     <h3 class="heading-1" data-aos="fade-right">Recent Work</h3>
     <div class="work__list">
-      <div class="work__details" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="1200">
+      <div class="work__details" data-aos="fade-right">
         <h4 class="heading-4 heading-4--light">The Light Walk</h4>
         <h5 class="heading-5">Website Design & Development</h5>
         <p class="work__details">
@@ -164,14 +164,13 @@
 
       </div>
       <a href="https://thelightwalk.com/" target="_blank">
-        <img src="img/lightmockup-min.png" alt="Work 1" class="work__img" data-aos="fade-right" data-aos-offset="300"
-          data-aos-easing="ease-in-sine">
+        <img src="img/lightmockup-min.png" alt="Work 1" class="work__img" data-aos="fade-up-left"">
       </a>
 
 
 
 
-      <div class="work__details">
+      <div class="work__details" data-aos="fade-up-right">
         <h4 class="heading-4 heading-4--light">B&L Cremation Systems</h4>
         <h5 class="heading-5">Website Development & SEO Strategy</h5>
         <p class="work__details">B&L Cremation Systems is the largest family-owned, independent crematory manufacturer
@@ -186,7 +185,7 @@
 
       </div>
       <a href="https://blcremationsystems.com/" target="_blank">
-        <img src="img/b&lmockup-min.png" alt="Work 2" class="work__img">
+        <img src="img/b&lmockup-min.png" alt="Work 2" class="work__img" data-aos="zoom-in">
         <!-- <img srcset="img/b&lmockup-min.png 600w, img/b&lmockup-min-large.png 1000w"
           sizes="(max-width: 56.25em) 88vw, (max-width: 37.5em) 86vw, 1000px"
           alt="Work 2"
@@ -203,7 +202,7 @@
 
 
 
-      <div class="work__details">
+      <div class="work__details" data-aos="zoom-in-right">
         <h4 class="heading-4 heading-4--light">Designershopp</h4>
         <h5 class="heading-5">Website Development & Ecommerce</h5>
         <p class="work__details">The Designershopp is an online clothing retailer. The company had be significantly
@@ -217,7 +216,7 @@
 
       </div>
       <a href="https://www.designershopp.com/" target="_blank">
-        <img src="img/designmockup-min.png" alt="Work 3" class="work__img">
+        <img src="img/designmockup-min.png" alt="Work 3" class="work__img" data-aos="zoom-in-left">
       </a>
 
 
@@ -233,29 +232,29 @@
       Creative and technical professionals ready to create
       your next big idea!
     </h3>
-    <h2 class="heading-2 heading-2--dark mb-md">
+    <h2 class="heading-2 heading-2--dark mb-md" data-aos="flip-up">
       What We Do
     </h2>
-    <p class="about__text">
+    <p class="about__text" data-aos="zoom-in-up">
       <span class="bold">Define:</span> Gather requirements, organize and plan
       the project
     </p>
-    <p class="about__text">
+    <p class="about__text" data-aos="zoom-in-up">
       <span class="bold">Design:</span> Our team collaborates with you to
       creatively design your brand
     </p>
-    <p class="about__text">
+    <p class="about__text" data-aos="zoom-in-up">
       <span class="bold">Develop:</span> Prototypes and alpha version of the
       project are set for approval
     </p>
-    <p class="about__text">
+    <p class="about__text" data-aos="zoom-in-up">
       <span class="bold">Deploy:</span> Final project review to full satisfaction and officially launched
     </p>
 
   </div>
   <section class="services">
-    <div class="service">
-      <svg class="service__icon">
+    <div class="service" data-aos="zoom-in-right">
+      <svg class="service__icon" >
         <use xlink:href="img/sprite.svg#icon-mobile"></use>
       </svg>
       <h4 class="heading-4 heading-4--dark">Custom Websites</h4>
@@ -266,7 +265,7 @@
         CSS site to an Eccomerce Site.
       </p>
     </div>
-    <div class="service">
+    <div class="service" data-aos="zoom-in-left">
       <svg class="service__icon">
         <use xlink:href="img/sprite.svg#icon-presentation"></use>
       </svg>
@@ -279,7 +278,7 @@
         visibility to drive qualified traffic to your website.
       </p>
     </div>
-    <div class="service">
+    <div class="service" data-aos="zoom-in-right">
       <svg class="service__icon">
         <use xlink:href="img/sprite.svg#icon-tools"></use>
       </svg>
@@ -297,7 +296,7 @@
         uses strategic designs that stand out from the crowd.
       </p>
     </div>
-    <div class="service">
+    <div class="service" data-aos="zoom-in-left">
       <svg class="service__icon">
         <use xlink:href="img/sprite.svg#icon-megaphone"></use>
       </svg>
@@ -313,8 +312,8 @@
     </div>
   </section>
   <section class="contact" id="contact">
-    <h3 class="heading-2 mb-sm"><span class="cnt">Contact</span></h3>
-    <form class="contact_form" action="https://formspree.io/mail.4kreative@gmail.com" method="POST">
+    <h3 class="heading-2 mb-sm" data-aos="zoom-out-down"><span class="cnt">Contact</span></h3>
+    <form class="contact_form" action="https://formspree.io/mail.4kreative@gmail.com" method="POST" data-aos="zoom-out-up">
       <div class="form__group">
         <input name="name" type="text" class="form__input" placeholder="Full name" id="name" required="required" />
         <label for="name" class="form__label">Full name</label>
