--- a/indexNew.html
+++ b/indexNew.html
@@ -223,7 +223,7 @@
 
     </div>
   </section>
-  <div class="about__pictures">
+  <div class="about__pictures" data-aos="zoom-in-down">
     <!-- <img src="img/img1.jpg" alt="Code" class="about__img--1" />
     <img src="img/img5.jpg" alt="Design" class="about__img--2" /> -->
   </div>
