--- a/indexNew.html
+++ b/indexNew.html
@@ -311,8 +311,8 @@
     </div>
   </section>
   <section class="contact" id="contact">
-    <h3 class="heading-2 mb-sm" data-aos="zoom-out-down"><span class="cnt">Contact</span></h3>
-    <form class="contact_form" action="https://formspree.io/mail.4kreative@gmail.com" method="POST" data-aos="zoom-out-up">
+    <h3 class="heading-2 mb-sm" data-aos="zoom-in-right"><span class="cnt">Contact</span></h3>
+    <form class="contact_form" action="https://formspree.io/mail.4kreative@gmail.com" method="POST" data-aos="zoom-in">
       <div class="form__group">
         <input name="name" type="text" class="form__input" placeholder="Full name" id="name" required="required" />
         <label for="name" class="form__label">Full name</label>
