fixed aos issues

--- a/indexNew.html
+++ b/indexNew.html
@@ -147,9 +147,9 @@
     </video>
   </div>
   <section class="work">
-    <h3 class="heading-1" data-aos="fade-right">Recent Work</h3>
+    <h3 class="heading-1" data-aos="zoom-in">Recent Work</h3>
     <div class="work__list">
-      <div class="work__details" data-aos="fade-right">
+      <div class="work__details" data-aos="zoom-in">
         <h4 class="heading-4 heading-4--light">The Light Walk</h4>
         <h5 class="heading-5">Website Design & Development</h5>
         <p class="work__details">
@@ -163,7 +163,7 @@
 
       </div>
       <a href="https://thelightwalk.com/" target="_blank">
-        <img src="img/lightmockup-min.png" alt="Work 1" class="work__img" data-aos="fade-up-left"">
+        <img src="img/lightmockup-min.png" alt="Work 1" class="work__img" data-aos="zoom-in">
       </a>
 
 
@@ -201,7 +201,7 @@
 
 
 
-      <div class="work__details" data-aos="zoom-in-right">
+      <div class="work__details" data-aos="fade-up-right">
         <h4 class="heading-4 heading-4--light">Designershopp</h4>
         <h5 class="heading-5">Website Development & Ecommerce</h5>
         <p class="work__details">The Designershopp is an online clothing retailer. The company had be significantly
@@ -215,7 +215,7 @@
 
       </div>
       <a href="https://www.designershopp.com/" target="_blank">
-        <img src="img/designmockup-min.png" alt="Work 3" class="work__img" data-aos="zoom-in-left">
+        <img src="img/designmockup-min.png" alt="Work 3" class="work__img" data-aos="fade-up-right">
       </a>
 
 
@@ -227,11 +227,11 @@
     <img src="img/img5.jpg" alt="Design" class="about__img--2" /> -->
   </div>
   <div class="about__content">
-    <h3 class="heading-3 mb-sm-1" data-aos="fade-up-right">
+    <h3 class="heading-3 mb-sm-1" data-aos="fade-up">
       Creative and technical professionals ready to create
       your next big idea!
     </h3>
-    <h2 class="heading-2 heading-2--dark mb-md" data-aos="flip-up">
+    <h2 class="heading-2 heading-2--dark mb-md" data-aos="zoom-in">
       What We Do
     </h2>
     <p class="about__text" data-aos="zoom-in-up">
@@ -252,7 +252,7 @@
 
   </div>
   <section class="services">
-    <div class="service" data-aos="zoom-in-right">
+    <div class="service" data-aos="zoom-in">
       <svg class="service__icon" >
         <use xlink:href="img/sprite.svg#icon-mobile"></use>
       </svg>
@@ -264,7 +264,7 @@
         CSS site to an Eccomerce Site.
       </p>
     </div>
-    <div class="service" data-aos="zoom-in-left">
+    <div class="service" data-aos="zoom-in">
       <svg class="service__icon">
         <use xlink:href="img/sprite.svg#icon-presentation"></use>
       </svg>
@@ -277,7 +277,7 @@
         visibility to drive qualified traffic to your website.
       </p>
     </div>
-    <div class="service" data-aos="zoom-in-right">
+    <div class="service" data-aos="zoom-in">
       <svg class="service__icon">
         <use xlink:href="img/sprite.svg#icon-tools"></use>
       </svg>
@@ -295,7 +295,7 @@
         uses strategic designs that stand out from the crowd.
       </p>
     </div>
-    <div class="service" data-aos="zoom-in-left">
+    <div class="service" data-aos="zoom-in">
       <svg class="service__icon">
         <use xlink:href="img/sprite.svg#icon-megaphone"></use>
       </svg>
@@ -311,7 +311,7 @@
     </div>
   </section>
   <section class="contact" id="contact">
-    <h3 class="heading-2 mb-sm" data-aos="zoom-in-right"><span class="cnt">Contact</span></h3>
+    <h3 class="heading-2 mb-sm" data-aos="zoom-in"><span class="cnt">Contact</span></h3>
     <form class="contact_form" action="https://formspree.io/mail.4kreative@gmail.com" method="POST" data-aos="zoom-in">
       <div class="form__group">
         <input name="name" type="text" class="form__input" placeholder="Full name" id="name" required="required" />
