--- a/indexNew.html
+++ b/indexNew.html
@@ -147,10 +147,11 @@
     </video>
   </div>
   <section class="work">
-    <h3 class="heading-1" data-aos="zoom-in">Recent Work</h3>
+    <h3 class="heading-1">Recent Work</h3>
     <div class="work__list">
-      <div class="work__details" data-aos="zoom-in">
-        <h4 class="heading-4 heading-4--light">The Light Walk</h4>
+      <div class="work__details" data-aos="fade-right">
+        <h4 class="heading-4 heading-4--light"><a href="https://thelightwalk.com/" target="_blank">The Light
+            Walk</a></h4>
         <h5 class="heading-5">Website Design & Development</h5>
         <p class="work__details">
           The Light Walk is a small business that specializes in Orthopedic, Therapeutic, and Diabetic Shoes. At
@@ -163,14 +164,15 @@
 
       </div>
       <a href="https://thelightwalk.com/" target="_blank">
-        <img src="img/lightmockup-min.png" alt="Work 1" class="work__img" data-aos="zoom-in">
+        <img src="img/lightmockup-min.png" alt="Work 1" class="work__img" data-aos="fade-up">
       </a>
 
 
 
 
-      <div class="work__details" data-aos="fade-up-right">
-        <h4 class="heading-4 heading-4--light">B&L Cremation Systems</h4>
+      <div class="work__details" data-aos="fade-right">
+        <h4 class="heading-4 heading-4--light"><a href="https://blcremationsystems.com/" target="_blank">B&L Cremation
+            Systems</a></h4>
         <h5 class="heading-5">Website Development & SEO Strategy</h5>
         <p class="work__details">B&L Cremation Systems is the largest family-owned, independent crematory manufacturer
           in the world.
@@ -184,7 +186,7 @@
 
       </div>
       <a href="https://blcremationsystems.com/" target="_blank">
-        <img src="img/b&lmockup-min.png" alt="Work 2" class="work__img" data-aos="zoom-in">
+        <img src="img/b&lmockup-min.png" alt="Work 2" class="work__img" data-aos="fade-up">
         <!-- <img srcset="img/b&lmockup-min.png 600w, img/b&lmockup-min-large.png 1000w"
           sizes="(max-width: 56.25em) 88vw, (max-width: 37.5em) 86vw, 1000px"
           alt="Work 2"
@@ -201,8 +203,9 @@
 
 
 
-      <div class="work__details" data-aos="fade-up-right">
-        <h4 class="heading-4 heading-4--light">Designershopp</h4>
+      <div class="work__details" data-aos="fade-right">
+        <h4 class="heading-4 heading-4--light"><a href="https://www.designershopp.com/"
+            target="_blank">Designershopp</a></h4>
         <h5 class="heading-5">Website Development & Ecommerce</h5>
         <p class="work__details">The Designershopp is an online clothing retailer. The company had be significantly
           growing, and needed our help with improving and redesigning their ecommerce website. We created an online
@@ -215,45 +218,45 @@
 
       </div>
       <a href="https://www.designershopp.com/" target="_blank">
-        <img src="img/designmockup-min.png" alt="Work 3" class="work__img" data-aos="fade-up-right">
+        <img src="img/designmockup-min.png" alt="Work 3" class="work__img" data-aos="fade-up">
       </a>
 
 
 
     </div>
   </section>
-  <div class="about__pictures" data-aos="zoom-in-down">
+  <div class="about__pictures">
     <!-- <img src="img/img1.jpg" alt="Code" class="about__img--1" />
     <img src="img/img5.jpg" alt="Design" class="about__img--2" /> -->
   </div>
   <div class="about__content">
-    <h3 class="heading-3 mb-sm-1" data-aos="fade-up">
+    <h3 class="heading-3 mb-sm-1">
       Creative and technical professionals ready to create
       your next big idea!
     </h3>
-    <h2 class="heading-2 heading-2--dark mb-md" data-aos="zoom-in">
+    <h2 class="heading-2 heading-2--dark mb-md">
       What We Do
     </h2>
-    <p class="about__text" data-aos="zoom-in-up">
+    <p class="about__text" data-aos="fade-right" data-aos-offset="120" data-aos-duration="500">
       <span class="bold">Define:</span> Gather requirements, organize and plan
       the project
     </p>
-    <p class="about__text" data-aos="zoom-in-up">
+    <p class="about__text" data-aos="fade-right" data-aos-offset="120" data-aos-duration="600">
       <span class="bold">Design:</span> Our team collaborates with you to
       creatively design your brand
     </p>
-    <p class="about__text" data-aos="zoom-in-up">
+    <p class="about__text" data-aos="fade-right" data-aos-offset="120" data-aos-duration="700">
       <span class="bold">Develop:</span> Prototypes and alpha version of the
       project are set for approval
     </p>
-    <p class="about__text" data-aos="zoom-in-up">
+    <p class="about__text" data-aos="fade-right" data-aos-offset="120" data-aos-duration="800">
       <span class="bold">Deploy:</span> Final project review to full satisfaction and officially launched
     </p>
 
   </div>
   <section class="services">
-    <div class="service" data-aos="zoom-in">
-      <svg class="service__icon" >
+    <div class="service" data-aos="fade-right" data-aos-offset="120" data-aos-duration="800">
+      <svg class="service__icon">
         <use xlink:href="img/sprite.svg#icon-mobile"></use>
       </svg>
       <h4 class="heading-4 heading-4--dark">Custom Websites</h4>
@@ -264,7 +267,7 @@
         CSS site to an Eccomerce Site.
       </p>
     </div>
-    <div class="service" data-aos="zoom-in">
+    <div class="service" data-aos="fade-right" data-aos-offset="180" data-aos-duration="1000">
       <svg class="service__icon">
         <use xlink:href="img/sprite.svg#icon-presentation"></use>
       </svg>
@@ -277,7 +280,7 @@
         visibility to drive qualified traffic to your website.
       </p>
     </div>
-    <div class="service" data-aos="zoom-in">
+    <div class="service" data-aos="fade-right" data-aos-offset="120" data-aos-duration="800">
       <svg class="service__icon">
         <use xlink:href="img/sprite.svg#icon-tools"></use>
       </svg>
@@ -295,7 +298,7 @@
         uses strategic designs that stand out from the crowd.
       </p>
     </div>
-    <div class="service" data-aos="zoom-in">
+    <div class="service" data-aos="fade-right" data-aos-offset="180" data-aos-duration="1000">
       <svg class="service__icon">
         <use xlink:href="img/sprite.svg#icon-megaphone"></use>
       </svg>
@@ -311,27 +314,28 @@
     </div>
   </section>
   <section class="contact" id="contact">
-    <h3 class="heading-2 mb-sm" data-aos="zoom-in"><span class="cnt">Contact</span></h3>
-    <form class="contact_form" action="https://formspree.io/mail.4kreative@gmail.com" method="POST" data-aos="zoom-in">
+    <h3 class="heading-2 mb-sm"><span class="cnt">Contact</span></h3>
+    <form class="contact_form" action="https://formspree.io/mail.4kreative@gmail.com" method="POST">
       <div class="form__group">
-        <input name="name" type="text" class="form__input" placeholder="Full name" id="name" required="required" />
+        <input name="name" type="text" class="form__input" placeholder="Full name" id="name" required="required"
+          data-aos="fade-right" />
         <label for="name" class="form__label">Full name</label>
       </div>
 
       <div class="form__group">
         <input name="email" name="_replyto" type="email" class="form__input" placeholder="Email address" id="email"
-          required="required" />
+          required="required" data-aos="fade-right" />
         <label for="email" class="form__label">Email address</label>
       </div>
 
       <div class="form__group">
         <textarea name="message" rows="6" class="form__input" id="message" name="message"
-          placeholder="Tell us about your project (Scope, timeline, budget, etc." name="message"
-          required="required"></textarea>
+          placeholder="Tell us about your project (Scope, timeline, budget, etc." name="message" required="required"
+          data-aos="fade-right"></textarea>
         <label for="message" class="form__label"> Message</label>
       </div>
 
-      <button class="form__btn btn">Send Request!</button>
+      <button class="form__btn btn" data-aos="fade-up">Send Request!</button>
 
     </form>
 
