--- a/indexNew.html
+++ b/indexNew.html
@@ -317,25 +317,24 @@
     <h3 class="heading-2 mb-sm"><span class="cnt">Contact</span></h3>
     <form class="contact_form" action="https://formspree.io/mail.4kreative@gmail.com" method="POST">
       <div class="form__group">
-        <input name="name" type="text" class="form__input" placeholder="Full name" id="name" required="required"
-          data-aos="fade-right" />
+        <input name="name" type="text" class="form__input" placeholder="Full name" id="name" required="required" />
         <label for="name" class="form__label">Full name</label>
       </div>
 
       <div class="form__group">
         <input name="email" name="_replyto" type="email" class="form__input" placeholder="Email address" id="email"
-          required="required" data-aos="fade-right" />
+          required="required" />
         <label for="email" class="form__label">Email address</label>
       </div>
 
       <div class="form__group">
         <textarea name="message" rows="6" class="form__input" id="message" name="message"
-          placeholder="Tell us about your project (Scope, timeline, budget, etc." name="message" required="required"
-          data-aos="fade-right"></textarea>
+          placeholder="Tell us about your project (Scope, timeline, budget, etc." name="message"
+          required="required"></textarea>
         <label for="message" class="form__label"> Message</label>
       </div>
 
-      <button class="form__btn btn" data-aos="fade-up">Send Request!</button>
+      <button class="form__btn btn">Send Request!</button>
 
     </form>
 
