contact form inset shadow added

--- a/indexNew.html
+++ b/indexNew.html
@@ -207,7 +207,7 @@
         <h4 class="heading-4 heading-4--light"><a href="https://www.designershopp.com/"
             target="_blank">Designershopp</a></h4>
         <h5 class="heading-5">Website Development & Ecommerce</h5>
-        <p class="work__details">The Designershopp is an online clothing retailer. The company had be significantly
+        <p class="work__details">The Designershopp is an online clothing retailer. The company has been significantly
           growing, and needed our help with improving and redesigning their ecommerce website. We created an online
           store and an easy
           shopping experience for the users, further driving growth and sales.
