--- a/indexNew.html
+++ b/indexNew.html
@@ -164,7 +164,13 @@
 
       </div>
       <a href="https://thelightwalk.com/" target="_blank">
-        <img src="img/lightmockup-min.png" alt="Work 1" class="work__img" data-aos="fade-up">
+        <!-- <img src="img/lightmockup-min.png" alt="Work 1" class="work__img" data-aos="fade-up"> -->
+        <img srcset="img/lightmockup-min-small.png 600w, img/lightmockup-min.png 1200w"
+          sizes="(max-width: 56.25em) 88vw, (max-width: 37.5em) 86vw, 1000px"
+          alt="Work 1"
+          class="work__img"
+          data-aos="fade-up"
+          src="img/lightmockup-min.png">
       </a>
 
 
@@ -186,12 +192,13 @@
 
       </div>
       <a href="https://blcremationsystems.com/" target="_blank">
-        <img src="img/b&lmockup-min.png" alt="Work 2" class="work__img" data-aos="fade-up">
-        <!-- <img srcset="img/b&lmockup-min.png 600w, img/b&lmockup-min-large.png 1000w"
+        <!-- <img src="img/b&lmockup-min.png" alt="Work 2" class="work__img" data-aos="fade-up"> -->
+        <img srcset="img/b&lmockup-min-small.png 600w, img/b&lmockup-min.png 1200w"
           sizes="(max-width: 56.25em) 88vw, (max-width: 37.5em) 86vw, 1000px"
           alt="Work 2"
           class="work__img"
-          src="img/b&lmockup-min-large.png"> -->
+          data-aos="fade-up"
+          src="img/b&lmockup-min.png">
         <!-- <picture class="footer__logo">
             <source srcset="img/logo-green-small-1x.png 1x, img/logo-green-small-2x.png 2x"
                     media="(max-width: 37.5em)">
@@ -218,7 +225,13 @@
 
       </div>
       <a href="https://www.designershopp.com/" target="_blank">
-        <img src="img/designmockup-min.png" alt="Work 3" class="work__img" data-aos="fade-up">
+        <!-- <img src="img/designmockup-min.png" alt="Work 3" class="work__img" data-aos="fade-up"> -->
+        <img srcset="img/designmockup-min-small.png 600w, img/designmockup-min.png 1200w"
+          sizes="(max-width: 56.25em) 88vw, (max-width: 37.5em) 86vw, 1000px"
+          alt="Work 3"
+          class="work__img"
+          data-aos="fade-up"
+          src="img/designmockup-min.png">
       </a>
 
 
