updated background and image

--- a/indexNew.html
+++ b/indexNew.html
@@ -164,13 +164,8 @@
 
       </div>
       <a href="https://thelightwalk.com/" target="_blank">
-        <!-- <img src="img/lightmockup-min.png" alt="Work 1" class="work__img" data-aos="fade-up"> -->
-        <img srcset="img/lightmockup-min-small.png 600w, img/lightmockup-min.png 1200w"
-          sizes="(max-width: 56.25em) 88vw, (max-width: 37.5em) 86vw, 1000px"
-          alt="Work 1"
-          class="work__img"
-          data-aos="fade-up"
-          src="img/lightmockup-min.png">
+        <img src="img/lightmockup-min.png" alt="Work 1" class="work__img" data-aos="fade-up">
+
       </a>
 
 
@@ -192,20 +187,8 @@
 
       </div>
       <a href="https://blcremationsystems.com/" target="_blank">
-        <!-- <img src="img/b&lmockup-min.png" alt="Work 2" class="work__img" data-aos="fade-up"> -->
-        <img srcset="img/b&lmockup-min-small.png 600w, img/b&lmockup-min.png 1200w"
-          sizes="(max-width: 56.25em) 88vw, (max-width: 37.5em) 86vw, 1000px"
-          alt="Work 2"
-          class="work__img"
-          data-aos="fade-up"
-          src="img/b&lmockup-min.png">
-        <!-- <picture class="footer__logo">
-            <source srcset="img/logo-green-small-1x.png 1x, img/logo-green-small-2x.png 2x"
-                    media="(max-width: 37.5em)">
-              <img srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x"
-                   alt="Full logo"
-                   src="img/logo-green-2x.png">
-          </picture> -->
+        <img src="img/b&lmockup-min.png" alt="Work 2" class="work__img" data-aos="fade-up">
+
       </a>
 
 
@@ -225,13 +208,8 @@
 
       </div>
       <a href="https://www.designershopp.com/" target="_blank">
-        <!-- <img src="img/designmockup-min.png" alt="Work 3" class="work__img" data-aos="fade-up"> -->
-        <img srcset="img/designmockup-min-small.png 600w, img/designmockup-min.png 1200w"
-          sizes="(max-width: 56.25em) 88vw, (max-width: 37.5em) 86vw, 1000px"
-          alt="Work 3"
-          class="work__img"
-          data-aos="fade-up"
-          src="img/designmockup-min.png">
+        <img src="img/designmockup-min.png" alt="Work 3" class="work__img" data-aos="fade-up">
+
       </a>
 
 
@@ -251,7 +229,7 @@
       What We Do
     </h2>
     <p class="about__text" data-aos="fade-right" data-aos-offset="120" data-aos-duration="500">
-      <span class="bold">Define:</span> Gather requirements, organize and plan
+      <span class="bold">Discover:</span> Gather requirements, organize and plan
       the project
     </p>
     <p class="about__text" data-aos="fade-right" data-aos-offset="120" data-aos-duration="600">
