content updated, and some font size fixes

--- a/indexNew.html
+++ b/indexNew.html
@@ -89,7 +89,7 @@
       "@type": "WebSite",
       "@id": "#website",
       "url": "https://4kreative.co/",
-      "name": "4Kreative | Digital Media Marketing Agency ,Web Developement, Design, SEO & Eccomerce in USA &amp; Stoughton &amp; Clearwater",
+      "name": "4Kreative | Digital Media Marketing Agency ,Web Developement, Design, SEO & Ecommerce in USA &amp; Stoughton &amp; Clearwater",
       "description": "I build bespoke websites to help my clients push their businesses further online.",
       "publisher": "Taras Kurilo, Ivan Perun",
       "potentialAction": {
@@ -252,10 +252,11 @@
       </svg>
       <h4 class="heading-4 heading-4--dark">Custom Websites</h4>
       <p class="service__text">
-        If you want want your website to work in all situations, then you need
-        something that's fast to load, looks professional and most of all,
-        just works. That's exactly what I offer whether it's a simple HTML and
-        CSS site to an Eccomerce Site.
+        <span class="services_all">Bring it to life</span><br>
+        From your ideas to the world, we create beautiful and engaging online experiences.
+        You want your website to work in all situations, it has to load, look professional and most of all,
+        just works. Whether it's a simple blog, landing page, or a fully functional
+        Ecommerce Site, we can make it.
       </p>
     </div>
     <div class="service" data-aos="fade-right" data-aos-offset="180" data-aos-duration="1000">
@@ -264,11 +265,11 @@
       </svg>
       <h4 class="heading-4 heading-4--dark">Content & SEO</h4>
       <p class="service__text">
-        4Kreative provides highly effective search engine optimization
-        and Internet marketing strategies to drive more customers to your site.
-        Identify top inbound opportunities and optimize your ranking for high-intent keywords. Increase your search
-        engine
-        visibility to drive qualified traffic to your website.
+        <span class="services_all">Plan and execute</span><br>
+        In today's digital world a highly effective search engine optimization
+        and Internet marketing strategies are a must to drive more customers to your site.
+        Increase your search engine visibility to drive qualified traffic to your website with high quality content and
+        search visibility.
       </p>
     </div>
     <div class="service" data-aos="fade-right" data-aos-offset="120" data-aos-duration="800">
@@ -277,16 +278,10 @@
       </svg>
       <h4 class="heading-4 heading-4--dark">Branding & Design</h4>
       <p class="service__text">
-        Our clients understand the value of great design and its ability to drive
-        adoption, engagement, and loyalty in today’s
-        complex marketplace. We design phenomenal brand experiences across the
-        customer lifecycle by applying design thinking to
-        business to connect, disrupt, and engage. Whether we’re crafting an
-        end-to-end customer experience or just working on a
-        single touchpoint, we design with an eye towards the holistic customer experience.
-        Design conversion-optimized website and landing pages, engaging ads, email templates, and more. Make sure your
-        brand
-        uses strategic designs that stand out from the crowd.
+        <span class="services_all">Tell your story</span><br>
+        Your brand identity helps present your company, clarify your mission and values, and stand out from your
+        competition. Your brand must use strategic designs that stand out from the crowd, provide effective
+        communication, and gets your message across to your target audience.
       </p>
     </div>
     <div class="service" data-aos="fade-right" data-aos-offset="180" data-aos-duration="1000">
@@ -295,12 +290,12 @@
       </svg>
       <h4 class="heading-4 heading-4--dark">Digital Marketing</h4>
       <p class="service__text">
+        <span class="services_all">Get out there</span><br>
         Drive brand awareness and engagement through organic and paid social
         campaigns. Leverage top social strategies to grow a
         following and gain valuable insight into your customers.
         Build highly segmented email campaigns that nurture leads into paying
-        customers. Keep potential and existing customers
-        engaged with newsletters and promotional materials.
+        customers.
       </p>
     </div>
   </section>
